Start conversion to libgdx